some fixes for PP and content overflow

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@
     --copyright-icon-fill-color-active: #BDBBBC;
     --price-filter-controls-color: #ABABAB;
     --body-shadow: rgba(0, 1, 1, 0.2);
+    --background-main-image-color: #284C6C;
+    --background-features-image1-color: #9F8075;
+    --background-map-color: #CBDDA9;
 }
 
 
@@ -138,8 +141,8 @@ html{
     list-style: none;
     margin: 0;
     padding: 0;
-    padding-top: 14px;
-    padding-bottom: 16px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -161,6 +164,14 @@ html{
     padding-right: 10px;
 }
 
+.main-nav__menu-item:nth-child(2) .main-nav__menu-link{
+    padding-right: 56px;
+}
+
+.main-nav__menu-item:nth-child(3) .main-nav__menu-link{
+    padding-left: 56px;
+}
+
 .main-nav__menu-item:last-child .main-nav__menu-link{
     padding-right: 72px;
     padding-left: 10px;
@@ -172,6 +183,7 @@ html{
     line-height: 1.86;
     font-weight: 700;
     color: var(--dark-text-color);
+    display: block;
 }
 
 .main-nav__menu-link:hover,
@@ -210,6 +222,7 @@ html{
     margin: 0;
     position: relative;
     background-image: url(../img/background_photo.jpg);
+    background-color: var(--background-main-image-color);
     background-size: 1200px 509px;
     min-height: 509px;
     display: flex;
@@ -298,6 +311,8 @@ html{
 
 .features-list__img-file{
     object-fit: cover;
+    background-color: var(--background-features-image1-color);
+    display: block;
 }
 
 .features-list__sub-list{
@@ -402,7 +417,7 @@ html{
 .hotel-search__button{
     display: block;
     margin: 0 auto;
-    padding: 30px 130px 30px 130px;
+    padding: 30px 130px 32px 130px;
     width: fit-content;
     min-width: 568px;
     max-width: 100%;
@@ -417,7 +432,7 @@ html{
     cursor: pointer;
     z-index: 3;
     position: sticky;
-    /* transition: all 0.1s; */
+    transition: all 0.1s;
 }
 
 .hotel-search__form{
@@ -658,6 +673,7 @@ html{
 .map-img{
     z-index: -1;
     object-fit: cover;
+    background-color: var(--background-map-color);
 }
 
 .map iframe{
@@ -765,6 +781,7 @@ html{
 /* HOTELS PAGE STYLES */
 .filters{
     background-image: url(../img/background_photo.jpg);
+    background-color: var(--background-main-image-color);
     background-position-y: 70%;
     color: var(--light-text-color);
     position: relative;
@@ -776,7 +793,7 @@ html{
 .filters-wrapper{
     display: flex;
     flex-wrap: wrap;
-    padding: 26px 72px 10px 72px;
+    padding: 26px 72px 7px 72px;
 }
 
 
@@ -806,6 +823,7 @@ html{
 .filters-group{
     padding-right: 118px;
     z-index: 0;
+    max-width: 30%;
 }
 
 .filter__price-button-container{
@@ -822,18 +840,18 @@ html{
 .filters-group__item{
     position: relative;
     margin: 0;
-    margin-bottom: 24px;
+    margin-bottom: 25px;
 }
 
 .filters-group__input + .filters-group__label::before{
     position: absolute;
     content: " ";
-    width: 25px;
+    width: 27px;
     height: 23px;
     left: 0;
     top: 0;
     background-image: url(../img/checkbox-off.svg);
-    background-size: 23px 23px;
+    background-size: 22px 23px;
     background-repeat: no-repeat;
     opacity: 1;
 }
@@ -841,7 +859,7 @@ html{
 .filters-group__input:focus + .filters-group__label::before{
     outline-color: var(--searchform-icons-fill-color);
     outline-style: auto;
-    outline-width: 2px;
+    outline-width: 1px;
 }
 
 .filters-group__input:disabled + .filters-group__label::before{
@@ -851,12 +869,12 @@ html{
 .filters-group__input:checked + .filters-group__label::before{
     position: absolute;
     content: " ";
-    width: 25px;
+    width: 27px;
     height: 23px;
     left: 0;
     top: 0;
     background-image: url(../img/checkbox-on.svg);
-    background-size: 27px 23px;
+    background-size: 26px 23px;
     background-repeat: no-repeat;
     opacity: 1;
 }
@@ -877,7 +895,7 @@ html{
 }
 
 .filters-group__price{
-    margin-bottom: 32px;
+    margin-bottom: 33px;
     z-index: 0;
 }
 
@@ -894,6 +912,7 @@ html{
     margin: 0;
     width: max-content;
     min-width: 317px;
+    width: auto;
     margin-bottom: 20px;
 }
 
@@ -937,6 +956,7 @@ html{
     position: absolute;
     padding: 0;
     left: 0;
+    top: 0;
     width: 19px;
     height: 19px;
     border: 7px solid var(--light-text-color);
@@ -944,7 +964,7 @@ html{
     border-radius: 50%;
     box-shadow: 0 2px 1px 0 var(--price-filter-controls-color);
     cursor: pointer;
-    transform: translateY(-50%);
+    transform: translateY(-45%);
 }
 
 .price-controls .toggle-min {
@@ -974,7 +994,7 @@ html{
     text-transform: uppercase;
     border: 2px solid var(--light-text-color);
     border-radius: 2px;
-    padding: 6px 34px 6px 34px;
+    padding: 5px 34px 6px 34px;
     margin: 0 auto;
     display: block;
     cursor: pointer;
@@ -1013,7 +1033,7 @@ html{
     line-height: 1.3;
     margin-right: 48px;
     align-self: start;
-    flex-shrink: 0;
+    flex-shrink: 1;
 }
 
 .sort-list{
@@ -1062,10 +1082,9 @@ html{
     display: flex;
     margin: 0;
     padding: 0;
-    /* align-self: center; */
     justify-content: flex-end;
     flex-shrink: 3;
-    margin-top: 8px;
+    margin-top: 10px;
 }
 
 .range-list__item{
@@ -1130,6 +1149,7 @@ html{
     display: grid;
     grid-template-columns: min-content auto;
     column-gap: 6px;
+    row-gap: 9px;
     flex-grow: 1;
 }
 
@@ -1140,6 +1160,7 @@ html{
     align-items: flex-end;
     justify-content: space-between;
     margin-top: 5px;
+    max-width: 30%;
 }
 
 .hotels-list__item-name-link{
@@ -1164,16 +1185,24 @@ html{
     font-weight: 700;
 }
 
+.hotels-list__item-description,
+.hotels-list__item-price{
+    display: block;
+    padding-bottom: 6px;
+}
+
 .hotels-list__item-link,
 .hotels-list__item-button{
     text-decoration: none;
     display: block;
     padding: 3px 16px 3px 17px;
-    align-self: end;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.5;
     justify-self: baseline;
+    width: min-content;
+    text-align: center;
+    min-width: 110px;
 }
 
 .hotels-list__stars{
@@ -1204,6 +1233,6 @@ html{
 
 .hotels-list__item-rating {
     background-color: var(--inputs-background-color);
-    padding: 6px 14px 6px 14px;
+    padding: 6px 12px 5px 15px;
     color: var(--medium-text-color)
 }
